// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`changeDisplayName should add new display name 1`] = `
Object {
  "identity": Object {
    "identity": Object {
      "data": Array [
        Object {
          "address": null,
          "birthDate": null,
          "created": 2020-01-01T07:00:00.000Z,
          "displayName": Object {
            "name": "newName",
            "number": 9999,
          },
          "events": Array [
            Object {
              "date": 2020-01-01T07:00:00.000Z,
              "name": "identity_created",
              "payload": Object {
                "address": null,
                "birthDate": null,
                "displayName": null,
                "familyName": null,
                "gender": null,
                "givenName": null,
                "gravatar": null,
                "locale": null,
                "middleName": null,
                "nickname": null,
                "phoneNumber": null,
                "phoneNumberVerified": false,
                "picture": null,
                "preferredUsername": null,
                "profile": null,
                "username": null,
                "website": null,
                "zoneInfo": null,
              },
            },
            Object {
              "date": 2020-01-01T07:00:00.000Z,
              "name": "identity_display_name_changed",
              "payload": Object {
                "displayName": Object {
                  "name": "newName",
                  "number": 9999,
                },
              },
            },
          ],
          "familyName": null,
          "gender": null,
          "givenName": null,
          "gravatar": null,
          "id": "fd4e3548-1279-4065-9671-74c3bbea0c25",
          "locale": null,
          "middleName": null,
          "nickname": null,
          "phoneNumber": null,
          "phoneNumberVerified": false,
          "picture": null,
          "preferredUsername": null,
          "profile": null,
          "updated": 2020-01-01T07:00:00.000Z,
          "username": null,
          "version": 1,
          "website": null,
          "zoneInfo": null,
        },
      ],
      "indices": Array [
        Object {
          "index": Object {
            "id": 1,
          },
          "options": Object {
            "unique": true,
          },
        },
      ],
    },
  },
}
`;

exports[`changeDisplayName should change existing display name 1`] = `
Object {
  "identity": Object {
    "identity": Object {
      "data": Array [
        Object {
          "address": null,
          "birthDate": null,
          "created": 2020-01-01T07:00:00.000Z,
          "displayName": Object {
            "name": "newName",
            "number": 9999,
          },
          "events": Array [
            Object {
              "date": 2020-01-01T07:00:00.000Z,
              "name": "identity_created",
              "payload": Object {
                "address": null,
                "birthDate": null,
                "displayName": Object {
                  "name": "displayName",
                  "number": 1111,
                },
                "familyName": null,
                "gender": null,
                "givenName": null,
                "gravatar": null,
                "locale": null,
                "middleName": null,
                "nickname": null,
                "phoneNumber": null,
                "phoneNumberVerified": false,
                "picture": null,
                "preferredUsername": null,
                "profile": null,
                "username": null,
                "website": null,
                "zoneInfo": null,
              },
            },
            Object {
              "date": 2020-01-01T07:00:00.000Z,
              "name": "identity_display_name_changed",
              "payload": Object {
                "displayName": Object {
                  "name": "newName",
                  "number": 9999,
                },
              },
            },
          ],
          "familyName": null,
          "gender": null,
          "givenName": null,
          "gravatar": null,
          "id": "fd4e3548-1279-4065-9671-74c3bbea0c25",
          "locale": null,
          "middleName": null,
          "nickname": null,
          "phoneNumber": null,
          "phoneNumberVerified": false,
          "picture": null,
          "preferredUsername": null,
          "profile": null,
          "updated": 2020-01-01T07:00:00.000Z,
          "username": null,
          "version": 1,
          "website": null,
          "zoneInfo": null,
        },
      ],
      "indices": Array [
        Object {
          "index": Object {
            "id": 1,
          },
          "options": Object {
            "unique": true,
          },
        },
      ],
    },
  },
}
`;
